--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<title>Zafarbekning shaxsiy sayti</title>
 	</head>
 	<body>
+		<!-- 28.10.2021 -->
+	
 		<h1>sarlavha h1 </h1>
 		<h2>sarlava h2 </h2>
 		<h3>sarlavha h3 </h3>
@@ -25,6 +27,10 @@
 		<!--bold yozuvni qaling qiling qilish (<b>, <strong>)-->
 		<!--underline yozuv tagiga chizish (<u>)-->
 		<!--yangi qatorga tashlash (<br>, </ br>)-->
-	</body>
+
+		<!-- 29.10.2021 -->
+		<!-- <a> linklar uchun foydalanamiz -->
+		<a href="./pages/lesson_2.html">Lesson 2</a>
+		</body>
 	
 </html>
