new files creates

--- a/index.html
+++ b/index.html
@@ -5,29 +5,12 @@
 		<title>Zafarbekning shaxsiy sayti</title>
 	</head>
 	<body>
-		<!-- 28.10.2021 -->
 	
-		<h1>sarlavha h1 </h1>
-		<h2>sarlava h2 </h2>
-		<h3>sarlavha h3 </h3>
-		<h4>sarlavha h4 </h4>
-		<h5>sarlavha h5 </h5>
-		<h6>sarlavha h6 </h6>
-		<p>
-		Seni deya tonglarim o'tar, <br>
-		Quyosh nuri meni uyg'otar. <br>
-		Kunim ham maroqli o'tar <br>
-		Agar seni bir bora korsam.
-		</p>
-		<p> <i> bu qiya yozuv turi </i></p>
-		<!--Html hujjat turi (<!DOCTYPE 	html>), -->
-		<!--Farzadndlari (<head>, <body>)-->
-		<!--Sarlvhalar (<h1> dan <h6> gacha)-->
-		<!--italic yozuvni qiya qilish (<i>, <em>)-->
-		<!--bold yozuvni qaling qiling qilish (<b>, <strong>)-->
-		<!--underline yozuv tagiga chizish (<u>)-->
-		<!--yangi qatorga tashlash (<br>, </ br>)-->
-
+		<h1>Asosiy sahifasi</h1>
+		
+		<h3>Mavzular</h3>
+		<!-- 28.10.2021 -->
+		<a href="./pages/lesson_1.html">Lesson 1</a><br>
 		<!-- 29.10.2021 -->
 		<!-- <a> linklar uchun foydalanamiz -->
 		<a href="./pages/lesson_2.html">Lesson 2</a>
