--- a/pages/lesson_2.html
+++ b/pages/lesson_2.html
@@ -6,5 +6,43 @@
 	</head>
 	<body>
 		<h1>Lesson 2 sahifasi</h1>
+		<h4> a tegi va ro'yxatlar</h4>
+		<!-- a tegining birinchi majburiy atributi href -->
+		<a href="#">yo'llanma</a><br>
+		<a href="#mvzu1">1-mavzu</a><br>
+		<a href="#mvzu2">2-mavzu</a><br>
+		<a href="#mvzu3">3-mavzu</a><br>
+		
+		<h4>Tartiblanmagan ro'yxat</h4>
+		<!-- ul -> unorderlist  - tartiblanmagan ro'yxat degani -->
+		<ul>
+			<!-- ro'yxat elemntlari list deb nomlanadi -->
+			<li><a href="#mvzu1">1-mavzu</a></li>
+			<li><a href="#mvzu2">2-mavzu</a></li>
+			<li><a href="#mvzu3">3-mavzu</a></li>
+			<li><a href="#mvzu4">4-mavzu</a></li>
+			<li><a href="#mvzu5">5-mavzu</a></li>
+		</ul>
+		<h4>Tartiblangan ro'yxat</h4>
+		<!-- ol -> orderlist  - tartiblangan ro'yxat degani -->
+		<ol>
+			<!-- ro'yxat elemntlari list deb nomlanadi -->
+			<li><a href="#mvzu1">1-mavzu</a></li>
+			<li><a href="#mvzu2">2-mavzu</a></li>
+			<li><a href="#mvzu3">3-mavzu</a></li>
+			<li><a href="#mvzu4">4-mavzu</a></li>
+			<li><a href="#mvzu5">5-mavzu</a></li>
+		</ol>
+		<center>
+		<ul>
+			<li><img src="../images/images.jpg" alt="Rasm o'rni" title="Avatar"></li>
+			<li><img src="../images/images.jpg" alt="Rasm o'rni" title="Avatar"></li>
+			<li><img src="../images/images.jpg" alt="Rasm o'rni" title="Avatar"></li>
+			<li><img src="../images/images.jpg" alt="Rasm o'rni" title="Avatar"></li>
+			<li><img src="../images/images.jpg" alt="Rasm o'rni" title="Avatar"></li>
+		</ul>
+		</center>
+		<br>
+		<a href="../index.html">Orqaga qaytish</a>
 	</body>
 </html>
