--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 		<a href="./pages/lesson_1.html">Lesson 1</a><br>
 		<!-- 29.10.2021 -->
 		<!-- <a> linklar uchun foydalanamiz -->
-		<a href="./pages/lesson_2.html">Lesson 2</a>
+		<a href="./pages/lesson_2.html">Lesson 2</a><br>
+		<!-- 29.10.2021 -->
+		<!-- <a> linklar uchun foydalanamiz -->
+		<a href="./pages/lesson_3.html">Lesson 3</a>
 		</body>
 	
 </html>
